--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 ktor:
     application:
         modules:
-            - com.example.ApplicationKt.module
+            - com.yaroslavzghoba.ApplicationKt.module
     deployment:
         port: 8081
